--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,5 +10,12 @@ html(lang="en")
             h1 Noom!
         main
             h2 Welcome to Noom
+            form#nickname
+                input(type="text", placeholder="Choose a nickname!", required)
+                button Save
+            ul 
+            form#msg
+                input(type="text", placeholder="write a msg", required)
+                button Send 
         button call
         script(src="public/js/app.js")
