--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,11 +11,13 @@ html(lang="en")
         main
             #welcome
                 form#name
-                    input(placeholder="message", required, type="text")
+                    input(placeholder="username", required, type="text")
                     button Save
                 form#roomname
                     input(placeholder="room name", required, type="text")
                     button Enter Room
+                h4 Open Rooms:
+                ul
             #room 
                 h3
                 ul
@@ -23,6 +25,10 @@ html(lang="en")
                 form#msg
                     input(placeholder="message", required, type="text")
                     button Send 
+                form#changename
+                    h3 Want to change your name?
+                    input(placeholder="new name", required, type="text")
+                    button Save 
                  
         script(src="/socket.io/socket.io.js")
         script(src="public/js/app.js")
