camera element added, mute/unmute change cam function done

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -9,6 +9,12 @@ html(lang="en")
         header
             h1 Noom!
         main
+            div#myStream
+                video#myFace(autoplay, playsinline, width="400", height="400")
+                button#mute Mute
+                button#camera Turn camera off
+                select#cameras
+                    option(value="device") Face Camera
             #welcome
                 form#name
                     input(placeholder="username", required, type="text")
